# SE4HPC_project_part1

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: ci-cd.yaml  ci.yaml
src/: main.cpp  matrix_mult.cpp
test/: README.md  test_correct_matrix_multiplication.cpp  test_matrix_multiplication.cpp
